hphp/hack/test/full_fidelity/cases/module_newtype_bad2.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
module foo;
module type Foo = int; // error
